# DH2323_computer_graphics_and_interaction

./: .gitignore
lab1/: skeleton.cpp
lab1/report/: content.tex  custom_imports.tex  titlepage.tex
lab2_animation/vectorLab/: CMakeLists.txt  vector.cpp  vector.h  vectorLab.cpp
lab2_rendering/: skeleton.cpp
lab2_rendering/report/: content.tex  titlepage.tex
lab3_rendering/: skeleton.cpp
lab3_rendering/report/: content.tex  custom_imports.tex  titlepage.tex
